--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,11 @@ DB_HOST=
 DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
-DB_NAME=
+DB_DATABASE=
 
 EXTENDS_CLASS_API_KEY=
 
 JWT_SECRET=
+
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
