--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "migration:generate": "typeorm-ts-node-commonjs -d src/data-source.ts migration:generate src/database/migrations/default",
-    "migration:run": "typeorm-ts-node-commonjs -d src/data-source.ts migration:run"
+    "migration:run": "typeorm-ts-node-commonjs -d src/data-source.ts migration:run",
+    "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed -d src/data-source.ts"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -24,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "typeorm-extension": "^2.4.0"
   }
 }
