--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "build": "tsc",
+    "start:build": "node dist/app.js",
     "migration:generate": "typeorm-ts-node-commonjs -d src/data-source.ts migration:generate src/database/migrations/default",
     "migration:run": "typeorm-ts-node-commonjs -d src/data-source.ts migration:run",
     "seed": "ts-node ./node_modules/typeorm-extension/dist/cli/index.js seed -d src/data-source.ts"
