--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "automata-logics-v2": "https://github.com/joaobb/AutomataLogics",
     "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
