--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
+    "short-unique-id": "^4.4.4",
     "typeorm": "^0.3.11",
     "typeorm-extension": "^2.4.0"
   }
